--- a/meal-finder/style.css
+++ b/meal-finder/style.css
@@ -73,6 +73,24 @@ input[type='text'] {
   border-radius: 3px;
 }
 
+.meal-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.2s ease-in;
+}
+
+.meal:hover .meal-info {
+  opacity: 1;
+}
+
 @media(max-width: 800px) {}
 @media(max-width: 700px) {}
 @media(max-width: 500px) {
