--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import 'https://fonts.googleapis.com/css?family=Lato&display=swap';
 
 :root {
-  --box-shadow: 
-    0 1px 3px rgba(0, 0, 0, 0.12), 
-    0 1px 2px rgba(0, 0, 0, 0.24);
+  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 * {
@@ -55,9 +53,9 @@ h4 {
   flex: 1;
   text-align: center;
 }
- .inc-exp-container > div:first-of-type {
-   border-right: 1px solid #dedede;
- }
+.inc-exp-container > div:first-of-type {
+  border-right: 1px solid #dedede;
+}
 
 .money {
   font-size: 20px;
@@ -78,7 +76,8 @@ label {
   margin: 10px 0;
 }
 
-input[type='text'], input[type='number'] {
+input[type='text'],
+input[type='number'] {
   border: 1px solid #dedede;
   border-radius: 2px;
   display: block;
