--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -133,9 +133,8 @@ input[type='number'] {
   padding: 2px 5px;
   position: absolute;
   top: 50%;
-  left: 0;
+  left: -1px;
   transform: translate(-100%, -50%);
-  z-index: -9;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
