--- a/music-player/style.css
+++ b/music-player/style.css
@@ -30,12 +30,50 @@ body {
   z-index: 10;
 }
 
+.music-info {
+  border: 2px solid #fff;
+  border-radius: 15px 15px 0 0;
+  padding: 10px 10px 10px 38%;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  width: calc(100% - 20px);
+  min-height: 60%;
+  opacity: 0;
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+}
+
+.music-info h4 {
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
+
+.music-container.play .music-info {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+
+.progress-container {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  background-color: black;
+}
+
+.progress {
+  width: 0%;
+  height: 5px;
+  background-color: rgba(252, 169, 169, 1);
+  transition: width 0.1s linear;
+}
+
 .img-container {
   position: relative;
   width: 110px;
 }
 
 .img-container img {
+  border: 2px solid #333;
   border-radius: 50%;
   object-fit: cover;
   height: 110px;
@@ -45,6 +83,19 @@ body {
   left: 0;
   animation: rotate 3s linear infinite;
   animation-play-state: paused;
+}
+
+.img-container::after {
+  content: '';
+  background: #fff;
+  width: 15px;
+  height: 15px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%, -50%);
 }
 
 .music-container.play .img-container img {
