--- a/typing-game/style.css
+++ b/typing-game/style.css
@@ -40,12 +40,16 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translateY(0);
+  transform: translateY(-100%);
   transition: transform 0.3s ease-in-out;
 }
 
-.settings.hide {
-  transform: translateY(-100%);
+.notransition {
+  transition-duration: 0s;
+}
+
+.settings.show {
+  transform: translateY(0);
 }
 
 #difficulty {
